# research-assistant-humanize

./: .gitignore  avatar.ipynb  crewai_research_report.ipynb  evaluator.ipynb  india_climate_security_report.txt  internet_search_tool.ipynb  main.py  pyproject.toml  research-assistant-validator-humanizer.ipynb  test_notebook.ipynb
