[project]
name = "research-assistant-humanize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.7",
    "crewai-tools>=1.14.7",
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langsmith>=0.8.15",
    "litellm>=1.89.1",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-instrumentation-crewai>=0.48.1",
    "opentelemetry-instrumentation-openai>=0.48.1",
    "opentelemetry-sdk>=1.34.1",
    "pandas>=3.0.3",
    "pydantic>=2.12.5",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
